<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/game_over"
        android:textColor="#9A1818"
        android:textSize="38sp" />

    <TextView
        android:id="@+id/textView4"
        android:text="@string/your_score"
        android:layout_marginTop="36dp"
        android:textSize="29sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/FinalScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:background="#4CAF50"
        android:text="@string/final_score"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonPlayAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#FF1B69"
            android:textSize="25sp"
            android:text=" Play Again "
            android:textAllCaps="false"
            app:cornerRadius="1dp" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#1189BF"
            android:textSize="25sp"
            android:text=" Back "
            android:textAllCaps="false"
            app:cornerRadius="1dp" />

    </LinearLayout>

</LinearLayout>















